2003-11-28  Thorsten Jordan <thorsten_jordan@gmx.de>
	* coast* user_interface mapcompile.cpp
	  - map compiles to normal stored format (further compression like
	    jpeg possible and sensible).
	    drawing/rendering with LOD possible.
	    2d map view: moving around the map possible (middle button)
	    LOD test: right button & move mouse y.
	  - there are still bugs, but LOD terrain rendering is getting
	    closer.

2003-11-23  Thorsten Jordan <thorsten_jordan@gmx.de>
	* 1.map
	  - compiled section of atlantic as map that should be enough for
	    this game (15000km x 11000km, resolution ~ 4.8km per pixel.)
	    Finer data is available for a few bucks from NASA (GTOPO30 maps,
	    around 1km resolution).
	    The new map shows some terrain bugs (no surprise).
	* user_interface.cpp
	  - further improvement of cloud appearance
	* filehelper, widget
	  - Win32 functions added, thus the program compiles under Win32
	    again.

2003-11-23  Thorsten Jordan <thorsten_jordan@gmx.de>
	* global_data
	  - removed old clouds, added file helper functions needed by widgets
	    Win32 version doesn't compile until we implement adequate Win32
	    file helper functions.
	* widget
	  - many new widgets, full functionality now (not used yet)
	* user_interface
	  - new cloud rendering using run time generation with Perlin noise
	    Earth curvature is yet ignored.

2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
	* system.h system.cpp (and client classes)
	  - major cleanup. More keyboard info available.
	  - removed silly ->draw_*image in system. Adapted all code.

2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
	* all source and build files (makefiles, KDE, VC6)
	  - moved to subdir "src"

2003-11-16  Thorsten Jordan <thorsten_jordan@gmx.de>
	* global_data.h global_data.cpp model.cpp
	  - replaced path DEFINEs by inline functions.

2003-11-15  Thorsten Jordan <thorsten_jordan@gmx.de>
	* model.cpp
	  - combined display lists with vertex arrays.