@@ -14,10 +14,10 @@ struct coastmap {
 	double offsetx, offsety;	// offset in meters for map (position of pixel pos 0,0)
 	vector<coastsegment> coastsegments;
 	
-	coastmap() : pixels_per_seg(0), segsx(0), segsy(0), pixelw_real(0), offsetx(0), offsety(0) {}	
+	coastmap() : pixels_per_seg(0), segsx(0), segsy(0), pixelw_real(0), offsetx(0), offsety(0) {}
 	~coastmap() {}
-	coastmap(const coastmap& o) : pixels_per_seg(pixels_per_seg), segsx(segsx), segsy(segsy),
-		pixelw_real(pixelw_real), offsetx(offsetx), offsety(offsety) {}
+	coastmap(const coastmap& o) : pixels_per_seg(o.pixels_per_seg), segsx(o.segsx), segsy(o.segsy),
+		pixelw_real(o.pixelw_real), offsetx(o.offsetx), offsety(o.offsety) {}
 	coastmap& operator=(const coastmap& o) { pixels_per_seg = o.pixels_per_seg; segsx = o.segsx; segsy = o.segsy;
 		pixelw_real = o.pixelw_real; offsetx = o.offsetx; offsety = o.offsety; return *this; }
 	void save(const string& filename) const;
